Map z-index bug

--- a/python/ecep/portal/static/css/application.css
+++ b/python/ecep/portal/static/css/application.css
@@ -332,7 +332,7 @@ h1, h2, h3, h4 {
         top: 0;
         height: auto;
         bottom: 0;
-        z-index: -1;
+        z-index: 0;
     }
     .leaflet-container .leaflet-control-zoom {
             margin-top: 71px;
